6315 DatoBestilt skal settes til dagens (#141)
* 6315 DatoBestilt skal settes til dagens hvis:

fakturaDato er før dagens
fakturaDato er i samme kvartal som dagens
fakturaDato er i neste kvartal, men kjøring den 19 i siste måned i kvartal er forbi